# SpotifyMusicMate

./: .env.example  .gitignore  Dockerfile  README.md  app.json  app.py  dependencies.txt  docker-compose.yml  generate_session.py  install.bat  install.sh  main.py  music_bot.session  music_bot.session-journal  pyproject.toml  replit.nix  session_generator.py  test_bot.py  test_main.py  test_music_bot.session  test_music_bot.session-journal
bot/: __init__.py  commands.py  config.py  database.py  helpers.py  image_ui.py  immediate_response.py  lyrics.py  music_quiz.py  playlist.py  queue_manager.py  recommendations.py  roles.py  spotify.py  start.py  ui.py  voice_chat.py  voice_commands.py  voice_overlay.py  voting.py
templates/: index.html
